Corrected nav links, added link to main.css

--- a/career/career.html
+++ b/career/career.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rihanna NSSTA Report</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="career.css">
 </head>
 
@@ -14,8 +14,8 @@
     <header>Rihanna</header>
     <nav class="navBar">
         <ul class="nav">
-            <li class="nav__item"><a href="#">Executive Summary</a></li>
-            <li class="nav__item"><a href="career/career.html">Career</a></li>
+            <li class="nav__item"><a href="index.html">Executive Summary</a></li>
+            <li class="nav__item"><a href="#">Career</a></li>
             <li class="nav__item"><a href="personal/personal.html">Personal</a></li>
             <li class="nav__item"><a href="news-feed/news-feed.html">News Feed</a></li>
         </ul>
@@ -33,48 +33,64 @@
             <section class="image__section">
                 <figure>
                     <img class="image" src="https://upload.wikimedia.org/wikipedia/en/3/32/Rihanna_-_Anti.png">
-                    <figcaption><i>Anti</i> (2016)</figcaption>
+                    <figcaption>
+                        <i>Anti</i> (2016)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image" src="https://upload.wikimedia.org/wikipedia/en/9/9b/Unapologetic_-_Rihanna.png">
-                    <figcaption><i>Unapologetic</i> (2012)</figcaption>
+                    <figcaption>
+                        <i>Unapologetic</i> (2012)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image"
                         src="https://upload.wikimedia.org/wikipedia/en/8/8e/Rihanna_-_Talk_That_Talk_%28standard%29.png">
-                    <figcaption><i>Talk That Talk</i> (2011)</figcaption>
+                    <figcaption>
+                        <i>Talk That Talk</i> (2011)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image"
                         src="https://upload.wikimedia.org/wikipedia/en/d/d1/Rihanna_-_Loud.png">
-                    <figcaption><i>Loud</i> (2010)</figcaption>
+                    <figcaption>
+                        <i>Loud</i> (2010)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image"
                         src="https://upload.wikimedia.org/wikipedia/en/a/aa/Rihanna_-_Rated_R.png">
-                    <figcaption><i>Rated R</i> (2009)</figcaption>
+                    <figcaption>
+                        <i>Rated R</i> (2009)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image"
                         src="https://upload.wikimedia.org/wikipedia/en/f/f7/Good_Girl_Gone_Bad.png">
-                    <figcaption><i>Good Girl Gone Bad</i> (2007)</figcaption>
+                    <figcaption>
+                        <i>Good Girl Gone Bad</i> (2007)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image"
                         src="https://upload.wikimedia.org/wikipedia/en/6/61/A_Girl_like_Me_-_Rihanna.png">
-                    <figcaption><i>A Girl Like Me</i> (2006)</figcaption>
+                    <figcaption>
+                        <i>A Girl Like Me</i> (2006)
+                    </figcaption>
                 </figure>
 
                 <figure>
                     <img class="image"
                         src="https://upload.wikimedia.org/wikipedia/en/6/6e/Rihanna_-_Music_of_the_Sun.png">
-                    <figcaption><i>Music of the Sun</i> (2005)</figcaption>
+                    <figcaption>
+                        <i>Music of the Sun</i> (2005)
+                    </figcaption>
                 </figure>
             </section>
         </article>
