--- a/news-feed/news-feed.html
+++ b/news-feed/news-feed.html
@@ -23,20 +23,107 @@
     <h1>News Feed</h1>
     <main>
         <Article>
-            <section>
+            <section class="ambassador">
                 <figure>
-                    <img src="" alt="">
-                    <figcaption>image description</figcaption>
+                    <img src="https://www.barbadosadvocate.com/sites/barbadosadvocate.com/files/styles/large/public/field/image/web-DSC_4032.jpg?itok=UVqLPfmO"
+                        alt="Rihanna Ambassador of Barbados">
+                    <figcaption class="ambassador__image">Rihanna Ambassador of Barbados</figcaption>
                 </figure>
-            </section>
-            <figure>
-                <figure>
-                    <img src="" alt="">
-                    <figcaption>image description</figcaption>
-                </figure>
-            </figure>
-            <section>
+                <h2 class="ambassador__heading">
+                    Rihanna Is Now an Official Ambassador of Barbados</h2>
+                <p class="ambassador__details">
+                    <dl class="ambassador__details--items">
+                        <dt>Event Date:</dt>
+                        <dd>September 2018 </dd>
 
+                        <dt>Event Location:</dt>
+                        <dd>Barbados </dd>
+
+                        <dt>Event Type:</dt>
+                        <dd>Ambassador Induction</dd>
+
+                        <dt>Collaborator:</dt>
+                        <dd>Prime Minister Mia Amor Mottley </dd>
+                    </dl>
+                </p>
+
+                <p class="ambassador__story">
+                    After ten years of being one of the cultural ambassadors for her home country of Barbados, in
+                    September 2018 the singer was appointed as the "Ambassador Extraordinary and Plenipotentiary" for
+                    the nation.
+                    <p>Prime Minister Mia Amor Mottley stated that Government was honoured to be able to confer the
+                        title on this outstanding Barbadian who has contributed significantly to raising the island’s
+                        profile across the world.</p>
+                </p>
+            </section>
+
+            <section class="lingerie-line">
+                <figure>
+                    <img src="https://images.businessoffashion.com/site/uploads/2018/09/GettyImages-957152068.jpg?auto=format%2Ccompress&crop=top&fit=crop&h=275&w=494"
+                        alt="Rihanna pictured with her luxury lingerie line, Savage X Fenty">
+                    <figcaption>Rihanna pictured with her luxury lingerie line, Savage X Fenty </figcaption>
+                </figure>
+                <h2 class="lingerie-line__heading">Rihanna Launches Lingerie Line: Savage X Fenty </h2>
+                <p class="lingerie-line__details">
+                    <dl class="lingerie-line__details--items">
+                        <dt>Event Date:</dt>
+                        <dd>May 2018</dd>
+
+                        <dt> Event Location:</dt>
+                        <dd>Product debuted on Instagram and online.</dd>
+
+                        <dt>Event Type:</dt>
+                        <dd>Lingerie line debut</dd>
+
+                        <dt>Collaborator:</dt>
+                        <dd>ALouis Vuitton SE</dd>
+
+                        <dt>Where to Purchase:</dt>
+                        <dd>Product may be purchased at <a href="https://www.savagex.com/">savagex.com</a></dd>
+                    </dl>
+                </p>
+                <p class="lingerie-line__story">
+                    Rihanna is known for chart-topping hits, but she is also making a name for herself in the realm of
+                    beauty and fashion. In 2017, she launched her first makeup line, Fenty Beauty. This month she’ll
+                    once again enter a new lane, luxury fashion, with the creation of Fenty collaborating with the
+                    French luxury goods conglomerate Louis Vuitton SE also known as LVMH.
+                </p>
+            </section>
+
+            <section class="world-tour">
+                <figure class="">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/60/Anti_World_Tour_poster.png"
+                        alt="Rihanna's Anti World Tour">
+                    <figcaption>Rihanna&apos;s &quotAnti World Tour&quot</figcaption>
+                </figure>
+                <h2 class="world-tour__heading">
+                    Rihanna Announces 2016 Tour with Travi$ Scott, Big Sean & The Weeknd</h2>
+
+                <p class="world-tour__details">
+                    <dl class="world-tour__details--items">
+                        <dt>Event Date:</dt>
+                        <dd>March 12, 2016 - November 27, 2016</dd>
+
+                        <dt> Event Location:</dt>
+                        <dd>
+                            43 in North America
+                            31 in Europe
+                            1 in Asia
+                            75 total</dd>
+
+                        <dt>Event Type:</dt>
+                        <dd>Concert</dd>
+
+                        <dt>Collaborators:</dt>
+                        <dd>Travis Scott, Big Sean, The Weeknd</dd>
+
+                        <dt>Where to Purchase:</dt>
+                        <dd></dd>
+                    </dl>
+                </p>
+                <p class="world-tour__story">
+
+                </p>
             </section>
         </Article>
     </main>
