--- a/career/career.html
+++ b/career/career.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rihanna NSSTA Report</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="career.css">
 </head>
 
@@ -14,10 +14,10 @@
     <header>Rihanna</header>
     <nav class="navBar">
         <ul class="nav">
-            <li class="nav__item"><a href="index.html">Executive Summary</a></li>
+            <li class="nav__item"><a href="../index.html">Executive Summary</a></li>
             <li class="nav__item"><a href="#">Career</a></li>
-            <li class="nav__item"><a href="personal/personal.html">Personal</a></li>
-            <li class="nav__item"><a href="news-feed/news-feed.html">News Feed</a></li>
+            <li class="nav__item"><a href="../personal/personal.html">Personal</a></li>
+            <li class="nav__item"><a href="../news-feed/news-feed.html">News Feed</a></li>
         </ul>
     </nav>
 
@@ -26,8 +26,20 @@
             <h1 class="title">Career</h1>
 
             <section class="title__section">
-                With over 200 million records sold worldwide and eight Grammy Awards, Rihanna has become one of the
-                biggest pop stars of the 21st century.
+                <p class=title__paragraph>
+                    With over 200 million records sold worldwide and eight Grammy Awards, Rihanna has become one of the
+                    biggest pop stars of the 21st century. Rihanna was discovered and rose to local fame in her home nation
+                    of Barbados in the early 2000s. She moved to the US in 2005 after signing with Def Jam Records. Over
+                    the next decade and a half, her fusion of pop, dance and R&B catapulted her to international success.
+                    She has collaborated with many artists, such as Jay-Z, Kanye West, Kendrick Lamar, Drake, and Calvin
+                    Harris. Having sold over 250 million records, Rihanna is today one of the world's best selling recording
+                    artists. Alongside her music career, Rihanna is well-known for her involvement in humanitarian causes,
+                    entrepreneurial ventures, various film and television performances, and the fashion industry. She is the founder of nonprofit organization Clara
+                    Lionel Foundation, cosmetics brand Fenty Beauty, and fashion house Fenty under LVMH. In 2018, the
+                    Government of Barbados appointed her as an ambassador with duties promoting education, tourism and
+                    investment. 
+                </p>
+                <p class=section__citation><i>Rihanna, https://en.wikipedia.org/w/index.php?title=Rihanna&oldid=905365999 (last visited July 10, 2019).</i></p>
             </section>
 
             <section class="image__section">
@@ -54,24 +66,21 @@
                 </figure>
 
                 <figure>
-                    <img class="image"
-                        src="https://upload.wikimedia.org/wikipedia/en/d/d1/Rihanna_-_Loud.png">
+                    <img class="image" src="https://upload.wikimedia.org/wikipedia/en/d/d1/Rihanna_-_Loud.png">
                     <figcaption>
                         <i>Loud</i> (2010)
                     </figcaption>
                 </figure>
 
                 <figure>
-                    <img class="image"
-                        src="https://upload.wikimedia.org/wikipedia/en/a/aa/Rihanna_-_Rated_R.png">
+                    <img class="image" src="https://upload.wikimedia.org/wikipedia/en/a/aa/Rihanna_-_Rated_R.png">
                     <figcaption>
                         <i>Rated R</i> (2009)
                     </figcaption>
                 </figure>
 
                 <figure>
-                    <img class="image"
-                        src="https://upload.wikimedia.org/wikipedia/en/f/f7/Good_Girl_Gone_Bad.png">
+                    <img class="image" src="https://upload.wikimedia.org/wikipedia/en/f/f7/Good_Girl_Gone_Bad.png">
                     <figcaption>
                         <i>Good Girl Gone Bad</i> (2007)
                     </figcaption>
@@ -97,7 +106,7 @@
 
         <article class="info">
             <section class="info__section">
-                <h2 class="title__section">Skills</h2>
+                <h2 class="title list__title">Skills</h2>
                 <ul class="list">
                     <li>Music and Voice</li>
                     <li>Stage and Video Performance</li>
@@ -108,7 +117,7 @@
             </section>
 
             <section class="info__section">
-                <h2 class="title__section">Grammy Awards</h2>
+                <h2 class="title list__title">Grammy Awards</h2>
                 <ul class="list">
                     <li>2018 - Best Rap/Sung Performace: "Loyalty" (w/ Kendrick Lamar)</li>
                     <li>2015 - Best Rap/Sung Performace: "The Monster" (w/ Eminem)</li>
@@ -122,7 +131,7 @@
             </section>
 
             <section class="info__section">
-                <h2 class="title__section">Places Rihanna Has Lived</h2>
+                <h2 class="title list__title">Places Rihanna Has Lived</h2>
                 <ul class="list">
                     <li>Barbados</li>
                     <li>USA</li>
