--- a/news-feed/news-feed.html
+++ b/news-feed/news-feed.html
@@ -14,9 +14,9 @@
     <header>Rihanna</header>
     <nav class="navBar">
         <ul class="nav">
-            <li class="nav__item"><a href="index.html">Executive Summary</a></li>
-            <li class="nav__item"><a href="career/career.html">Career</a></li>
-            <li class="nav__item"><a href="personal/personal.html">Personal</a></li>
+            <li class="nav__item"><a href="../index.html">Executive Summary</a></li>
+            <li class="nav__item"><a href="../career/career.html">Career</a></li>
+            <li class="nav__item"><a href="../personal/personal.html">Personal</a></li>
             <li class="nav__item"><a href="#">News Feed</a></li>
         </ul>
     </nav>
