add styling to main.css and career.css, add links to index.html and career.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Rihanna NSSTA Report</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="executive-summary/executive-summary.css">
+    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
 </head>
 
 <body>
