Flexbox fixed on family images

--- a/personal/personal.html
+++ b/personal/personal.html
@@ -8,6 +8,7 @@
     <title>Rihanna NSSTA Report</title>
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="personal.css">
+    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -56,8 +57,7 @@
                     </figcaption>
                 </figure>
                 <figure class="family__img">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFsvpZCRCxzHsiWEPpowIl6oi1mHiWpo-Cnv35tqeK1K5SWJmF"
-                        alt="Rajad Fenty">
+                    <img src="https://akns-images.eonline.com/eol_images/Entire_Site/2014931/rs_1024x759-141031140152-634-rajad-fenty-rihanna-siblings2.jw.103114.jpg" alt="Rajad Fenty">
                     <figcaption>
                         Brother: Rajad Fenty
                     </figcaption>
